--- a/templates/racoon.conf.j2
+++ b/templates/racoon.conf.j2
@@ -12,7 +12,7 @@ remote anonymous {
   }
   generate_policy off;
   lifetime {{ ipsec_lifetime }};
-  nat_transversal {{ ipsec_nat_traversal }};
+  nat_traversal {{ ipsec_nat_traversal }};
 
 }
 
